--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <modules>
         <module>spring-boot-quickstart</module>
         <module>spring-boot-config</module>
+        <module>spring-boot-template</module>
     </modules>
     <packaging>pom</packaging>
 
